New converter - Project  JSON Writer